mihir_files/style.css
/* ... */
.conference {
  font-weight: 800;
  color: purple !important;
}

.conference-in-submission {
  font-weight: 800;
  color: brown !important;
}
span .rishabh {
  font-weight: 400 !important;
}

.padding-top-10 {
  padding-top: 10px;
}

.padding-right-20 {
  padding-right: 20px;"
}

.paper {
  color: #381ebc
}

.code {
  color: black
}

.padding-bottom-10 {
  padding-bottom: 10px;
}

.images {
  width: 100%;
  height: auto;
}

.remove-bottom {
  border-bottom: 0px !important;
}

a {
  color: #28D;
  text-decoration: none;
  border-bottom: 1px dashed #ccc;
}

li a {
  color:black;
}

li a:hover{
  color: #28D;
}

.border-bottom {
  border-bottom: 1px dashed #ccc;
}

.author-names {
  color: #555;
}

.rishabh {
  color: black;
  font-weight: 400;
}

.website {
  color: #28D;
}

.period {
  color: #555;
  font-size: 14px;
}

.position {
  color: black;
  font-weight: 400;
}

.hr-line {
  display: block;
  height: 1px;
  border: 0;
  /* border-top: 1px solid #e7e7e7; */
  margin: 0.7em 0 0.7em 0;
  padding: 0;
}

.fw-400 {
  font-weight: 400;
}

.company-logo {
  float: right;
  height: auto;
  width: 150px;
}

.exp-desc {
  width: 80%;
  text-align: justify;
  padding-top: 10px;
}

.hr-line-projects {
  display: block;
  height: 1px;
  border: 0;
  /* border-top: 1px solid #e7e7e7; */
  margin: 1.3em 0 1.3em 0;
  padding: 0;
}

.fw-300 {
  font-weight: 300;
}

a.social-icons {
  text-decoration: none;
  border-bottom: none;
  font-size: 23px;
  padding-right: 5%;
}

a.social-icons:hover {
  color: #555;
  text-decoration: none;
  border-bottom: none;
  font-size: 23px;
  padding-right: 5%;
}

.margin-btm-20 {
  margin-bottom: 10px;
}
.equal-contribution {
  font-style: italic;
  color: #555;
}
.cloudcv {
  margin-top: 1.3%;
}
.rs-gt {
  margin-top: 1.5%;
}
.bullet-points {
  font-weight: 400;
  color: #000 !important;  
}
a.bullet-points:hover {
  color: #28D !important;
}
.gsoc-mentor {
  margin-top: 2.2%;
}
.gci {
  margin-top: 4.3%;
}
.gsoc-student {
  margin-top: 2%;
}
.pssi {
  margin-top: 2%;
}
.ncs {
  margin-top: 3%;
}
.gt-gra {
  margin-top: 9.5%;
}
.color-black {
  color: black;
}
a.color-black:hover{
  color: #28D !important;
}
.guesswhich {
  margin-top: 1.5%;
}
.margin-top-2 {
  margin-top: 2%;
}

.wsite-youtube-container {
 position:relative;
 padding-bottom:46.25% !important;
 padding-top:0px;
 height:0;
 overflow:hidden
}
.wsite-youtube-container iframe,
.wsite-youtube-container .wsite-youtube-coverbox {
 position:absolute;
 top:0;
 left:0;
 width:100%;
 height:100%
}
.wsite-youtube-container .wsite-youtube-coverbox {
 background:url(/images/blank.gif);
 z-index:2
}
.inside-active .wsite-youtube-coverbox {
 display:none
}
.wsite-youtube-wrapper {
 max-width:100%
}
.wsite-youtube-size-small {
 width:302px
}
.wsite-youtube-size-medium {
 width:401px
}
.wsite-youtube-size-large {
 width:501px
}
.wsite-youtube-size-xl {
 width:650px
}
.wsite-youtube-size-hd {
 width:853px
}
.wsite-youtube-align-center {
 margin:0 auto
}
.wsite-youtube-align-right {
 margin:0 0 0 auto
}

/* img {
    transition: transform 0.25s ease;
}

img:click {
    -webkit-transform: scale(1.5);
    transform: scale(1.5);
} */
.column {
  float: left;
  width: 33.33%;
  padding: 0px;
}

/* Clearfix (clear floats) */
.row::after {
  content: "";
  clear: both;
  display: table;
}

